--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_tts: ^4.0.2
   google_fonts: ^6.1.0
-  audioplayers: ^5.2.1
+  # audioplayers: ^5.2.1
 
 dev_dependencies:
   flutter_test:
